# hermes-fluxer-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALL_FOR_AGENTS.md  README.md  REALTIME_VOICE.md  VOICE_CONTEXT_CACHE.md  __init__.py  adapter.py  after-install.md  livekit_bridge.py  plugin.yaml  pyproject.toml  xai_realtime.py
.github/workflows/: ci.yml  quality-security.yml
docs/: voice-configuration.md
scripts/: fluxer_livekit_smoke.py  fluxer_stt_voice_loop.py  fluxer_voice_auto_join.py  fluxer_xai_duplex_smoke.py  fluxer_xai_room_loop.py
tests/: conftest.py  test_fluxer_stt_voice_loop.py  test_fluxer_voice_auto_join.py  test_fluxer_xai_room_loop_vad.py  test_livekit_bridge.py  test_plugin_package.py  test_transcription_tools.py  test_xai_realtime.py
tools/: __init__.py  transcription_tools.py
