[project]
name = "hermes-fluxer-plugin"
version = "0.1.1"
description = "Fluxer platform plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Elkim" }
]
dependencies = [
  "httpx>=0.24",
  "websockets>=11",
]

[project.urls]
Homepage = "https://github.com/elkimek/hermes-fluxer-plugin"
Hermes = "https://hermes-agent.nousresearch.com/docs"
Fluxer = "https://fluxer.app"

[project.optional-dependencies]
realtime = [
  "livekit>=1.1.10",
]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "PyYAML>=6",
  "tomli>=2; python_version < '3.11'",
]

[tool.setuptools]
py-modules = ["adapter", "livekit_bridge", "xai_realtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
